# elyria-compliance-evidence-wrapper

./: .gitignore  AUDITOR_REVIEW_PATH.md  COMPLIANCE_WRAPPER_MODEL.md  CONTROL_MAPPING.md  LICENSE  NON_PRODUCTION_NOTICE.md  PUBLIC_DISCLOSURE_BOUNDARY.md  README.md  REGULATED_REVIEW_PATH.md  pyproject.toml
configs/: control_map.yaml
examples/: boundary_receipt_refuse.json
samples/: boundary_receipt_execute.json  boundary_receipt_refuse.json
schemas/: boundary_receipt.schema.json  build_sheet_receipt.schema.json  compliance_packet.schema.json
src/elyria_compliance_wrapper/: cli.py  crypto.py  mapper.py  verify.py
tests/: test_basic.py
